# data-structures-practice

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  gtest-binary-tree-tests.cpp  gtest-queue-circular-tests.cpp  gtest-queue-stack-tests.cpp  gtest-stack-expression-validator-tests.cpp  gtest-stack-minimum-tests.cpp  gtest-stack-tests.cpp
ds/: CMakeLists.txt
ds/include/: Stack.hpp  Tree.hpp
ds/include/Heap/: Heap.hpp
ds/include/Queue/: CircularQueue.hpp  Queue.hpp  StackQueue.h  StackQueue.hpp
ds/include/Sort/: Sort.h
ds/include/Stack/: ExpressionValidator.h  ExpressionValidator.hpp  MinimumStack.hpp  Stack.hpp
ds/include/Tree/: BinarySearchTree.h  Tree.hpp
ds/src/: ExpressionValidator.cpp
ds/src/Sort/: Sort.cpp
ds/src/Stack/: ExpressionValidator.cpp  MinimumStack.cpp
ds/src/Tree/: BinarySearchTree.cpp
tests/: gtest-binary-search-tree-tests.cpp  gtest-binary-tree-tests.cpp  gtest-heap-tests.cpp  gtest-queue-circular-tests.cpp  gtest-queue-stack-tests.cpp  gtest-queue-tests.cpp  gtest-sort-tests.cpp  gtest-stack-expression-validator-tests.cpp  gtest-stack-minimum-tests.cpp  gtest-stack-tests.cpp
